Take 3: math is hard. Still trying to get the spacing correct

--- a/style.css
+++ b/style.css
@@ -1101,13 +1101,13 @@ body.active,html.active{
 	background-position:0 0; 
 }
 .social-media-icons .social-media-icon-link.twitter{
-	background-position:0 -94px;
+	background-position:0 -228px;
 }
 .social-media-icons .social-media-icon-link.youtube{
-	background-position: 0 -141px;
+	background-position: 0 -342px;
 }
 .social-media-icons .social-media-icon-link.instagram{
-	background-position:0 -47px; 
+	background-position:0 -114px; 
 }
 /*
 .social-media .social-media-icons .social-media-icon-link.flickr{
